--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
 
+:root{
 
-:root
-{
-    --background:#020202;
-    --red: #C20000;
-    --blue:#001F78;
+    --background :#000000;
+    --red: #c20000;
+    --blue: #001f70; 
     --gradient: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%);
-    --font: 'Titilium web', sans-serif;
-    
-}
-*
-{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
 
-}
-body
-{
-    
-    background-color: var(--background);
-    font: var(--font);
-    font-size: 16px;
-}
-
-.header-top
-{
-    font-size: 30px;
-    width: 100%;
-    height: 2.7em;
-
-
+    --font: 'Titillium Web', sans-serif;
 }
 
 *{
@@ -42,191 +18,247 @@ body
     box-sizing: border-box;
 }
 
-body
-{
-    background-color: var(--background);
-    font-family: var(--font);
+body{
+    font-family: var( --font);
     font-size: 16px;
+    background-color: var(--background);
+    
 }
-img
-{
+img{
     width: 100%;
 }
-.header-top
-{
+
+.topo{
     width: 100%;
     height: 5em;
+    background-color: var(--background);
 }
-.content
-{
-    width: 100%;
+
+.content{
+    width: 80%;
     max-width: 75em;
     height: 100%;
     margin: auto;
-}
-.flex-spbt-center
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.header-top img
-{
-    max-width: 21.18em;
-}
-.menu
-{
-    width: 100%;
-    max-width: 50em;
-}
-.menu ul{
-    list-style-type: none;
 
 }
-.menu a
-{
-    color:#fff;
+
+.flex-center-bt{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.topo img{
+    max-width: 21.18em;
+}
+
+.menu{
+    width: 100%;
+    max-width: 50em;
+    
+}
+
+.menu ul{
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.menu a{
+    color: white;
     text-decoration: none;
     font-size: 1.5em;
+    padding: 0.9em 0.5em;
     text-transform: uppercase;
-    padding: 0.9em 0.66em;
+
 }
-.menu a:hover
-{ 
+.menu a:hover{
     background-color: var(--red);
-    text-shadow: 0 0 20px #fff;
-    text-decoration: underline;
 }
-#menu-bars
-{
+
+#menu-bars{
     display: none;
 }
+
 .banner{
+    width: 100%;
     position: relative;
 }
-.banner-container{
+
+.banner-position{
     width: 100%;
     height: 100%;
-    /* background-color: rgba(127, 255, 212, 0.39); */
     position: absolute;
     top: 0;
 }
+
 .banner-content{
     width: 80%;
     height: 100%;
-    /* background-color: rgba(255, 235, 205, 0.384); */
     margin: auto;
     display: flex;
     justify-content: flex-end;
 }
+
 .banner-text{
     width: 50%;
     height: 100%;
-    /* background-color: coral; */
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    color:#fff;
+    align-items: center;
+    color: white;
+    
 }
+
 .banner-text h1{
     font-size: 5.62em;
+
 }
+
 .banner-text p{
     font-size: 1.87em;
+    
+
 }
+
 .banner-text a{
-    color:#fff;
     font-size: 1.87em;
-    text-decoration: none;
     text-transform: uppercase;
+    color: white;
+    text-decoration: none;
     background-color: var(--red);
-    padding: 0.5em 1.2em;
-    border-radius: 0.75em;
-    margin-top: 2em;
+    padding: 0.5em 0.5em;
+    border-radius: 0.5em;
+    margin-top: 1em;
 }
-.games{
+
+.jogos{
     width: 100%;
     height: 7.5em;
-    /* background-color: yellow; */
+    color: white;
 }
-.games ul{
-    width: 100%;
-    /* background-color: red; */
+
+.jogos ul{
     list-style-type: none;
+    width: 100%;
 }
-.games img{
-    width: 170px;
-  
-}
-.games ul a:hover img{
+
+.jogos ul a:hover img{
+    transform: scale(1.1);
     transition: 0.5s;
-    transform: scale(1.5);
 }
+
 .about{
+    width: 100%;
     height: 31.25em;
-    background-color:var(--blue);
+    background-color: var(--blue);
     position: relative;
 }
+
 .about-angulation{
-    height: 100%;
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
 }
+
 .angulation{
-height: 24.125em;
-width: 100%;
-background-color: var(--background);
-transform: skewY(-4deg);
+    width: 100%;
+    height: 25em;
+    background-color: var(--background);
+    transform: skewy(-5deg);
 }
-.container-about{
-    color: white;
+
+.about-position{
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
+    
+}
 
-}
-.content-about
-{
-    width: 80%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.text-about{
+
+.about-text{
     width: 50%;
+    color: white;
     text-align: justify;
+    
+    
 }
-.text-about h2{
+
+.about-text h2{
+    font-size: 2.18em;
+    margin-bottom: 0.5em;
+    
+}
+
+.about-text p {
+    font-size: 1.125em;
     margin-bottom: 1em;
-    font-size: 2.1875em;
-}
-.text-about p{
-    font-size: 1.25em;
-}
-.content-about img{
-    max-width: 31.875em;
+
 }
 
+.about-position img{
+    max-width: 31.87em;
+}
+
+.jogos-aovivo, .jogos-embreve{
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 1.875em;/*30px*/
+}
+
+.jogos-aovivo::after{
+    content: '';
+    height: 2.666em;
+    border: solid 1px #fff;
+    margin: 0 1em;
+}
+
+.partida{
+    width: 9.5em;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: 1em;
+    
+}
+
+.partida img{
+    max-width: 1.8em; /*54px*/
+    
+}
+
+.time1, .time2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 400;
+    
+}
+
+.time1 img{
+    margin-left: 0.5em;
+}
+
+.time2 img{
+    margin-right: 0.5em;
+}
 
 
 
-/* Até 1199px */
 @media screen and (max-width: 74.93em){
 
 }
-/* Até 991px */
-@media screen and (max-width: 61.93em){
-    
-}
-/* até 767px */
-@media screen and (max-width: 47.93em){
-   
-}
-/* Até 576px */
-@media screen and (max-width: 36em){
+
+
+@media screen and (max-width: 47.93){
 
 }
 
+@media screen and (max-width: 35.93){
 
+}
