--- a/css/style.css
+++ b/css/style.css
@@ -1,252 +1,456 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
 
+
+/*Indentidade Visual*/
 :root{
-
-    --background :#000000;
-    --red: #c20000;
-    --blue: #001f70; 
-    --gradient: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%);
-
-    --font: 'Titillium Web', sans-serif;
+   --header: #1E1C21;
+   --background: #000000;
+   --red: #c20000;
+   --blue: #001f70;
+   --gradient: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%);
+   --font: 'Titillium Web', sans-serif;
 }
 
+/* Resetar os valores */
 *{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   list-style-type: none;
+   text-decoration: none;
 }
 
+/* Body */
 body{
-    font-family: var( --font);
-    font-size: 16px;
-    background-color: var(--background);
-    
-}
-img{
-    width: 100%;
+   font-size: 16px;
+   background-color: var(--background);
+   font-family: var(--font);
 }
 
-.topo{
-    width: 100%;
-    height: 5em;
-    background-color: var(--background);
+/* Header */
+.header{
+   width: 100%;
+   height: 5em; /*1em = 16px ou o font-size do elemento que se tem referencia* (rem - pega o tamanho da font-size do proprio navegador)*/
+   background-color: var(--header);
+}
+
+.header img{
+   width: 100%;
+   max-width: 21.18em;
+   display: block;
 }
 
 .content{
-    width: 80%;
-    max-width: 75em;
-    height: 100%;
-    margin: auto;
-
+   width: 100%;
+   max-width: 75em;
+   height: 100%;
+   margin: 0 auto;
 }
 
-.flex-center-bt{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.flex-content{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
 
-.topo img{
-    max-width: 21.18em;
+.menu-header{
+   width: 100%;
+   max-width: 50em;
 }
 
-.menu{
-    width: 100%;
-    max-width: 50em;
-    
+.menu-header ul{
+   display: flex;
+   justify-content: space-between; 
 }
 
-.menu ul{
-    list-style-type: none;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
+.menu-header a{
+   padding: 0.9em 0.66em;
+   color: white;
+   font-size: 1.5em;
+   text-transform: uppercase;
+   transition: 0.1s;
 }
 
-.menu a{
-    color: white;
-    text-decoration: none;
-    font-size: 1.5em;
-    padding: 0.9em 0.5em;
-    text-transform: uppercase;
-
-}
-.menu a:hover{
-    background-color: var(--red);
+.menu-header a:hover{
+   background-color: var(--red);
 }
 
-#menu-bars{
-    display: none;
+#header-bars{
+   display: none;
 }
 
+/* Banner */
 .banner{
-    width: 100%;
-    position: relative;
+   width: 100%;
+   height: 607px;
+   background: rgb(2,0,36);
+   background: linear-gradient(-90deg, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 7%, rgba(236,20,20,1) 100%);
 }
 
-.banner-position{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
+.content-banner{
+   width: 100%;
+   height: 100%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   flex-wrap: wrap;
 }
 
-.banner-content{
-    width: 80%;
-    height: 100%;
-    margin: auto;
-    display: flex;
-    justify-content: flex-end;
+.image-banner img{
+   width: 90%;
 }
 
-.banner-text{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    
+.image-banner{
+   width: 40%;
+   margin-left: 5%;
 }
 
-.banner-text h1{
-    font-size: 5.62em;
-
+.text-banner{
+   width: 40%;
+   margin-right: 10%;
+   text-align: center;
 }
 
-.banner-text p{
-    font-size: 1.87em;
-    
-
+.text-banner h1{
+   color: white;
+   font-size: 90px;
+   font-family: var(--font);
 }
 
-.banner-text a{
-    font-size: 1.87em;
-    text-transform: uppercase;
-    color: white;
-    text-decoration: none;
-    background-color: var(--red);
-    padding: 0.5em 0.5em;
-    border-radius: 0.5em;
-    margin-top: 1em;
+.text-banner p{
+   color: white;
+   font-family: var(--font);
+   font-size: 30px;
 }
 
-.jogos{
-    width: 100%;
-    height: 7.5em;
-    color: white;
+.text-banner a{
+   color: white;
+   font-size: 30px;
+   font-family: var(--font);
+   padding: 10px 45px;
+   background-color: var(--red);
+   border-radius: 10px;
+   position: relative;
+   top: 40px;
+   transition: 0.2s;
 }
 
-.jogos ul{
-    list-style-type: none;
-    width: 100%;
+.text-banner a:hover{
+   background-color: white;
+   color: var(--red);
+   transform: scale(1.5);
+   transition: 0.4s;
 }
 
-.jogos ul a:hover img{
-    transform: scale(1.1);
-    transition: 0.5s;
+/* Games */
+.games{
+   width: 100%;
+   height: 121px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
+.content-games{
+   width: 100%;
+   height: 100%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   margin: 0 15%;
+}
+
+.content-games img:hover{
+   transform: scale(1.5);
+   transition: 0.5s;
+}
+
+.content-games img{
+   width: 90%;
+   transition: 0.3s;
+   min-width: 120px;
+}
+
+/* About */
 .about{
-    width: 100%;
-    height: 31.25em;
-    background-color: var(--blue);
-    position: relative;
+   width: 100%;
+   height: 31.25em;
+   background-color: var(--blue);
+
+   position: relative;
 }
 
-.about-angulation{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
+.container-about{
+   position: absolute;
+   top: 10px; 
 }
 
-.angulation{
-    width: 100%;
-    height: 25em;
-    background-color: var(--background);
-    transform: skewy(-5deg);
+.back-about{
+   width: 100%;
+   height: 30.5em;
+   display: flex;
+   align-items: center;
 }
 
-.about-position{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    
+.angulation-about{
+   width: 100%;
+   height: 24.125em;
+   background-color: var(--background);
+   transform: skewY(-4deg);
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.content-about{
+   width: 80%;
+   margin: auto;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+}
+
+.text-about{
+   width: 35%;
+   margin-left: 6%;
+   height: auto;
+   color: white;
+}
+
+.text-about h2{
+   padding: 20px 0px;
+}
+
+.image-about{
+   width: 60%;
+   display: flex;
+   justify-content: center;
+}
+
+/* Matches */
+.matches{
+   color: white;
+   width: 100%;
+   height: 7.5em;
+   background-color: var(--background);
+   display: flex;
+   justify-content: center;
+}
+
+.content-matches{
+   width: 80%;
+   height: 100%;
+   display: flex;
+   align-items: center;
+}
+
+.live-matches{
+   text-transform: uppercase;
+   width: 30%;
+   margin: 0 6%;
+   display: flex;
+}
+
+.later-matches{
+   width: 70%;
+   display: flex;
+}
+
+.live-matches h2, .later-matches h2{
+   margin-right: 20px;
+}
+
+.teams-matches{
+   display: flex;
+   align-items: center;
+   padding: 10px;
+   transition: 0.2s;
+}
+
+.teams-matches:hover{
+   border: 4px solid var(--blue)
+}
+
+#espacamento{
+   margin-right: 10px;
+}
+
+.teams-matches p, img{
+   padding: 0 13px;
+}
+
+/* News */
+.news{
+   width: 100%;
+   height: 61.25em;
+   background-color: #1E1C21;
+}
+
+.news h2{
+   color: white;
+   font-size: 35px;
+   margin-left: 10%;
+   padding: 30px;
+   padding-left: 0px;
+}
+
+.content-news{
+   width: 80%;
+   margin: 0 10%;
+   display: flex;
+}
+
+.news-news{
+   width: 80%;
+}
+
+.content-tabela{
+   width: 20%;
+}
+
+.bloco-news{
+   width: 90%;
+   margin-bottom: 4%;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.news-bloco{
+   width: 14.81em;
+   height: 22.87em;
+   background: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%);
+   box-shadow: 1px 1px 20px 4px #000000;
+   display: flex;
+   flex-direction: column;
+   transition: 0.2s;
+}
+
+.news-bloco:hover{
+   transform: scale(1.1);
+   border: solid var(--red);
 }
 
 
-.about-text{
-    width: 50%;
-    color: white;
-    text-align: justify;
-    
-    
+.team-tabela{
+   color: white;
+   margin-bottom: 8px;
+   padding: 10px 0px;
+   border: 5px solid var(--red);
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   transition: 0.2s;
 }
 
-.about-text h2{
-    font-size: 2.18em;
-    margin-bottom: 0.5em;
-    
+.team-tabela:hover{
+   border: 4px solid var(--blue);
 }
 
-.about-text p {
-    font-size: 1.125em;
-    margin-bottom: 1em;
+.team-tabela p{
+   padding-top: 10px;
+}
+
+.placar-tabela{
+   width: 221px;
+   height: auto;
+   display: flex;
+   align-items: center;
+}
+
+.text-bloco{
+   color: white;
+   margin: 10px;
+   margin-top: 0;
+}
+
+.text-bloco h3{
+   font-family: 18px;
+   text-transform: uppercase;
+}
+
+
+.image-bloco img{
+   padding: 0;
 
 }
 
-.about-position img{
-    max-width: 31.87em;
+.tabela-news{
+   width: 14.81em;
+   height: 46.93em;
+   background: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%);
+   box-shadow: 1px 1px 20px 4px #000000;
 }
 
-.jogos-aovivo, .jogos-embreve{
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    font-size: 1.875em;/*30px*/
+/* Footer */
+.footer{
+   width: 100%;
+   background-color: black;
+   display: flex;
+   justify-content: center;
+   align-self: center;
 }
 
-.jogos-aovivo::after{
-    content: '';
-    height: 2.666em;
-    border: solid 1px #fff;
-    margin: 0 1em;
+.content-footer{
+   width: 100%;
+   height: 100%;
+   margin: 10px 10%;
 }
 
-.partida{
-    width: 9.5em;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-left: 1em;
-    
+.line-footer{
+   width: 100%;
+   border: 1px solid #cdcdcd;
+   background-color: #cdcdcd;
+   margin: 25px 0;
 }
 
-.partida img{
-    max-width: 1.8em; /*54px*/
-    
+.inferior-footer{
+   margin-bottom: 15px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
 
-.time1, .time2{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: 400;
-    
+.logo-footer{
+   width: 30%;
 }
 
-.time1 img{
-    margin-left: 0.5em;
+.logo-footer img{
+   width: 100%;
+   max-width: 250px;
 }
 
-.time2 img{
-    margin-right: 0.5em;
+.direitos-footer{
+   color: white;
 }
+
+.direitos-footer span:hover{
+   color: var(--red);
+}
+
+.buttons-footer{
+   width: 30%;
+   display: flex;
+   justify-content: flex-end;
+}
+
+.buttons-footer ul{
+   display: flex;
+}
+
+.buttons-footer a{
+   color: white;
+   padding: 10px;
+}
+
+.buttons-footer a:hover{
+   text-decoration: none;
+   color: var(--red);
+}
+
+
+
 
 
 
@@ -254,11 +458,14 @@ img{
 
 }
 
-
-@media screen and (max-width: 47.93){
+@media screen and (max-width: 61.93em){ 
 
 }
 
-@media screen and (max-width: 35.93){
+@media screen and (max-width: 47.93em){
+
+}
+
+@media screen and (max-width: 36em){
 
 }
