--- a/estilos/style.css
+++ b/estilos/style.css
@@ -325,11 +325,13 @@ body{
     box-shadow: 1px 1px 20px 4px #000000;
     display: flex;
     flex-direction: column;
-    transition: 0.2s;
+    transition: 0.5's;
+   
 }
 
 .news-bloco:hover{
     border: 4px solid #8326EF;
+    float: left ;
 }
 
 
@@ -664,7 +666,7 @@ body{
 
 /* Large devices (desktops, 992px and up)*/
 @media screen and (max-width: 62em){
-    /* Menu Superior - Header */
+    /* Header */
     .header img{
         width: 35%;
     }
@@ -678,7 +680,7 @@ body{
         font-size: 1em;
     }
 
-     /* Banner - Main */
+     /* Banner */
     .banner{
         width: 100%;
         height: 507px;
@@ -716,12 +718,12 @@ body{
         top: 40px;
     }
 
-    /* Games - Section */
+    /* jogos */
     .content-games img{
         width: 100%;
     }
 
-    /* About - Section */
+    /* sobre */
     .angulation-about{
         height: 24.125em;
     }
@@ -742,7 +744,7 @@ body{
     .image-about{
         display: none;
     }
-    /* Matches - Section */
+    /* partidas */
     .matches{
         height: auto;
         display: flex;
